--- a/src/model/yolo/data.yaml
+++ b/src/model/yolo/data.yaml
@@ -1,69 +1,62 @@
-# YOLO 학습용 데이터셋 설정 파일
-# 데이터셋 루트 경로
-# 데이터셋 루트 경로 (absolute path recommended)
-path: C:/codit_data/sprint_ai_project1_data
-# 훈련/검증/테스트 경로 (absolute paths)
-train: C:/codit_data/sprint_ai_project1_data/images/train
-val: C:/codit_data/sprint_ai_project1_data/images/train
-test: C:/codit_data/sprint_ai_project1_data/images/test
-# 클래스 개수 (0번(배경/미사용) + 56종 의약품 = 57개)
-nc: 57
-# 클래스 이름 (0번은 비워두고, 1번부터 실제 데이터와 매칭)
+path: C:\Users\정주희\OneDrive\바탕 화면\코드잇 자료\codeit_5team\data\yolo_dataset
+train: images/train
+val: images/val
+test: images/test
+nc: 56
 names:
-  0: "background"
-  1: "1900"
-  2: "2483"
-  3: "3351"
-  4: "3483"
-  5: "3544"
-  6: "3743"
-  7: "3832"
-  8: "4543"
-  9: "12081"
-  10: "12247"
-  11: "12778"
-  12: "13395"
-  13: "13900"
-  14: "16232"
-  15: "16262"
-  16: "16548"
-  17: "16551"
-  18: "16688"
-  19: "18147"
-  20: "18357"
-  21: "19232"
-  22: "19552"
-  23: "19607"
-  24: "19861"
-  25: "20014"
-  26: "20238"
-  27: "20877"
-  28: "21325"
-  29: "21771"
-  30: "22074"
-  31: "22347"
-  32: "22362"
-  33: "24850"
-  34: "25367"
-  35: "25438"
-  36: "25469"
-  37: "27733"
-  38: "27777"
-  39: "27926"
-  40: "27993"
-  41: "28763"
-  42: "29345"
-  43: "29451"
-  44: "29667"
-  45: "30308"
-  46: "31863"
-  47: "31885"
-  48: "32310"
-  49: "33009"
-  50: "33208"
-  51: "33880"
-  52: "34597"
-  53: "35206"
-  54: "36637"
-  55: "38162"
-  56: "41768"
+  0: 보령부스파정 5mg
+  1: 뮤테란캡슐 100mg
+  2: 일양하이트린정 2mg
+  3: 기넥신에프정(은행엽엑스)(수출용)
+  4: 무코스타정(레바미피드)(비매품)
+  5: 알드린정
+  6: 뉴로메드정(옥시라세탐)
+  7: 에어탈정(아세클로페낙)
+  8: 리렉스펜정 300mg/PTP
+  9: 아빌리파이정 10mg
+  10: 다보타민큐정 10mg/병
+  11: 써스펜8시간이알서방정 650mg
+  12: 에빅사정(메만틴염산염)(비매품)
+  13: 리피토정 20mg
+  14: 크레스토정 20mg
+  15: 가바토파정 100mg
+  16: 동아가바펜틴정 800mg
+  17: 오마코연질캡슐(오메가-3-산에틸에스테르90)
+  18: 리리카캡슐 150mg
+  19: 종근당글리아티린연질캡슐(콜린알포세레이트) 
+  20: 콜리네이트연질캡슐 400mg
+  21: 트루비타정 60mg/병
+  22: 스토가정 10mg
+  23: 노바스크정 5mg
+  24: 마도파정
+  25: 플라빅스정 75mg
+  26: 엑스포지정 5/160mg
+  27: 아토르바정 10mg
+  28: 라비에트정 20mg
+  29: 리피로우정 20mg
+  30: 자누비아정 50mg
+  31: 맥시부펜이알정 300mg
+  32: 놀텍정 10mg
+  33: 자누메트정 50/850mg
+  34: 큐시드정 31.5mg/PTP
+  35: 아모잘탄정 5/100mg
+  36: 트윈스타정 40/5mg
+  37: 카나브정 60mg
+  38: 울트라셋이알서방정
+  39: 졸로푸트정 100mg
+  40: 트라젠타정(리나글립틴)
+  41: 비모보정 500/20mg
+  42: 레일라정
+  43: 리바로정 4mg
+  44: 트라젠타듀오정 2.5/850mg
+  45: 아질렉트정(라사길린메실산염)
+  46: 자누메트엑스알서방정 100/1000mg
+  47: 글리아타민연질캡슐
+  48: 신바로정
+  49: 에스원엠프정 20mg
+  50: 글리틴정(콜린알포세레이트)
+  51: 제미메트서방정 50/1000mg
+  52: 아토젯정 10/40mg
+  53: 로수젯정10/5밀리그램
+  54: 로수바미브정 10/20mg
+  55: 카발린캡슐 25mg
