--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
+# 설정 
 *.env
+
+# 데이터
 data/original/
 data/processed/
+data/yolo_dataset/
+
+# 캐시
 .idea/
+.vscode/
+.DS_Store
+__pycache__/
+*.pyc
+*.pt
+condaenv*.txt
+
+# 산출물
+results/
